--- a/nomad/index.html
+++ b/nomad/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div class="wrapper"></div>
-    <script src="template.js"></script>
+    <script src="spread.js"></script>
 </body>
 </html>
