21/02/03_add_async_await
21/02/03_add_async_await

--- a/nomad/index.html
+++ b/nomad/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div class="wrapper"></div>
-    <script src="spread.js"></script>
+    <script src="./promise/parallel_async_await.js"></script>
 </body>
 </html>
